third_party/llvm-project/llvm/test/TableGen/prep-ifndef-diag-1.td
// RUN: not llvm-tblgen %s 2>&1 | FileCheck %s

// CHECK: error: Expected macro name after #ifndef
#ifndef 1
